--- a/templates/inc/question_box.html
+++ b/templates/inc/question_box.html
@@ -5,11 +5,13 @@
       <div class="col-3">
          <img class = "question-img" src = "{{ question.author.image.url }}" width = 100px height = 100px >
          <div class="row right-side">
-             <input type="image" name="dislike" src="{% static "img/dislike.png" %}" alt="Submit" width="19" height="19">
+             <input href="#" class="js-vote" type="image" name="dislike" src="{% static "img/dislike.png" %}" alt="Submit" width="19" height="19">
+             <a href="#" class="js-vote" data-action="like" data-pk="{{ question.pk }}">like</a>
              <div class="rating-title">
                  {{ question.rating }}
              </div>
-             <input type="image" name="like" src="{% static "img/like.png" %}" alt="Submit" width="19" height="19">
+             <input href="#" class="js-vote" type="image" name="like" src="{% static "img/like.png" %}" alt="Submit" width="19" height="19">
+             <a href="#" class="js-vote" data-action="dislike" data-pk="{{ question.pk }}">dislike</a>
          </div>
       </div>
       <! –– For title and text ––>
