--- a/templates/inc/base.html
+++ b/templates/inc/base.html
@@ -32,8 +32,11 @@
             </div>
         </main>
         <! –– JS ––>
-        <script src="{% static "js/jquery.slim.min.js" %}"></script>
+        <script src="{% static "js/jquery-3.5.1.min.js" %}"></script>
         <script src="{% static "js/popper.min.js" %}"></script>
         <script src="{% static "js/bootstrap.min.js" %}"></script>
+
+        {% block jscode %}
+        {% endblock %}
     </body>
 </html>
