--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,5 +1,8 @@
 {% extends 'inc/base.html' %}
+
+{% load bootstrap4 %}
 {% load static %}
+
 
 {% block navbar %}
    {% include 'inc/logined_navbar.html' %}
@@ -8,40 +11,18 @@
 {% block content %}
 <div class="col-9">
     <div>
-        <h2>Settings: Dr. Pepper</h2>
+        <h2>Settings: {{ request.user }}</h2>
     </div>
-    <form class="setting-form">
-        <div class="form-group row">
-            <label for="inputLogin" class="col-sm-2 col-form-label">Login</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputLogin" value="dr_pepper">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail" value="dr.pepper@mail.ru">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="Nickname" class="col-sm-2 col-form-label">Nickname</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="Nickname" value="Dr. Perper">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-2">
-                Upload avatar
-            </div>
-            <div class="col-10">
-                <img class = " question-img" src = "{% static "img/test1.jpg" %}" width = 125px height = 125px >
-                <div class="setting-form custom-file">
-                    <input type="file" class="custom-file-input" id="customFile">
-                    <label class="custom-file-label" for="customFile">Choose image</label>
-                </div>
-                <button type="button" class="btn btn-primary setting-form">Save</button>
-            </div>
-        </div>
+
+    <form class="form setting-form" method="POST" action="/settings/" enctype="" novalidate>
+
+    {% csrf_token %}
+    {% bootstrap_form form %}
+    {% buttons %}
+
+        <button type="submit" class="btn btn-primary">Save</button>
+     {% endbuttons %}
+
     </form>
 </div>
 {% endblock content %}
