--- a/templates/inc/pagination.html
+++ b/templates/inc/pagination.html
@@ -2,12 +2,16 @@
 
 <nav aria-label="Page navigation example">
     <ul class="pagination" style="margin-top: 15px">
-        {% for number in objects.paginator.page_range %}
-            {% if objects.number == number %}
-                <li class="page-item active"><a class="page-link" href="">{{ objects.number }}</a></li>
-            {% else %}
-                <li class="page-item"><a class="page-link" href="?page={{ number }}">{{ number }}</a></li>
-            {% endif %}
-        {% endfor %}
+        {% if objects.has_previous %}
+            <a class="page-link" href="?page=1"> 1</a>
+            <a class="page-link" href="?page={{ objects.previous_page_number }}"> &laquo; </a>
+        {% endif %}
+
+        <li class="page-item active"><a class="page-link" href="#">{{ objects.number }}</a></li>
+
+        {% if objects.has_next %}
+            <a class="page-link" href="?page={{ objects.next_page_number }}">&raquo;</a>
+            <a class="page-link" href="?page={{ objects.paginator.num_pages }}">{{ objects.paginator.num_pages }}</a>
+        {% endif %}
     </ul>
 </nav>
