--- a/templates/inc/base.html
+++ b/templates/inc/base.html
@@ -35,6 +35,7 @@
         <script src="{% static "js/jquery-3.5.1.min.js" %}"></script>
         <script src="{% static "js/popper.min.js" %}"></script>
         <script src="{% static "js/bootstrap.min.js" %}"></script>
+        <script src="{% static "js/centrifuge.min.js" %}"></script>
 
         {% block jscode %}
         {% endblock %}
