--- a/templates/inc/tag.html
+++ b/templates/inc/tag.html
@@ -1,3 +1,3 @@
 {% load static %}
 
-<a href="{% url 'tagquestions' tagname.title %}"> {{ tagname.title }} </a>
+<a href="{% url 'tagquestions' pk=tagname.title %}"> {{ tagname.title }} </a>
